deploy/gke/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: frink-kgf-service
  namespace: frink
  labels:
    app: frink-kgf-server
spec:
  selector:
    app: frink-kgf-server
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: http
